Madina: UserService for Java 1.8 (#12)
* Added order classes

* dygyhn

* UserService for Java 1.8

* ConsoleInterface (Lines 424-970) for Java 1.8)

---------

Co-authored-by: Madina Ismailova <ismailovamadin4567@gmail.com>